src/objects/Invoice_No__c.object
<CustomObject>
    <fields>
        <fullName>Full_Invoice_No__c</fullName>
        <label>Full Invoice No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoive_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Invoive Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>Service_Request__c</referenceTo>
        <relationshipLabel>Invoice No</relationshipLabel>
        <relationshipName>Invoice_No</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Invoice No</label>
    <nameField>
        <label>Invoice No Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice No</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>